#4190 Virtual folder rename Fixed notification z-index style Added 'focus', 'blur' and 'selectAll' to the Supra.Input.InlineString input
git-svn-id: http://svn.vig/supra7/trunk@872 f05b830f-2085-0410-a479-8f75d39d0b34

--- a/src/webroot/cms/content-manager/notification/notification.css
+++ b/src/webroot/cms/content-manager/notification/notification.css
@@ -1,6 +1,6 @@
 .supra-notification {
 	position: absolute;
-	z-index: 2;
+	z-index: 100;
 	left: 0;
 	top: 50px;
 	right: 0;
